--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 	<title>Projeto final IA</title>
 </head>
 <body>
@@ -11,23 +11,6 @@
 	<form action=""></form>
 </body>
 <style>
-	*{
-	margin: 0;
-	box-sizing: border-box;
-}
 
-html {
-	width: 100vw;
-	height: 100vh;
-}
-
-body{
-	background-color: grey;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
 </style>
 </html>
