--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,58 @@
-	*{
-	margin: 0;
-	box-sizing: border-box;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
+  color: #191308;
 }
 
 html {
-	width: 100vw;
-	height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
-body{
-	background-color: grey;
-	width: 100%;
-	height: 100%;
+body {
+  background-color: #4A8FE7;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form {
+  display: fl;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+}
+
+h1{
+	text-align: center;
+}
+
+.wrapper {
+  width: 100%;
+  height: 80%;
+  /* border: 1px solid red; */
+}
+
+.prediction{
+	width: 80%;
+	height: 80%;
+	border: 1px solid #191308;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	flex-direction: column;
+}
+
+.prediction h2 {
+	margin-top: 25px;
+	margin-bottom: 50px;
 }
