--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
   <body>
     <div class="wrapper flex">
       <h1>Disciplina Inteligência Artficial Aplicada - Projeto final</h1>
+      <div class="flex">
+      <p>Grupo: Beatriz Barbosa, Davi Galdino,  Gabriela Silva, Samuel Lemos e Suelen Ramos.</p>
+      <a href="https://github.com/bea-codes/final-project-ai">Github</a>
+        
+      </div>
       <form action="{{url_for('predict')}}" method="post" class="flex" enctype=multipart/form-data>
         <p>Input vai ser ou um arquivo ou um texto...</p>
         <input type="text" name="input" required="required"/>
