--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       </div>
       <form action="{{url_for('predict')}}" method="post" class="flex" enctype=multipart/form-data>
         <p>Input vai ser ou um arquivo ou um texto...</p>
-        <input type="text" name="input" required="required"/>
+        <!-- <input type="text" name="input" required="required"/> -->
         <input type="file" name=file_input id="" required="required"/>
         <button type="submit" value="Upload">Enviar</button>
       </form>
