--- a/static/style.css
+++ b/static/style.css
@@ -56,3 +56,24 @@ h1{
 	margin-top: 25px;
 	margin-bottom: 50px;
 }
+
+.grupo{
+  text-align: left;
+}
+
+#submit{
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+#submit:hover{
+  background-color: #0d60cc;
+}
+
+input{
+  margin-top: 15px;
+  cursor: pointer;
+}
