--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,22 @@
     <div class="wrapper flex">
       <h1>Disciplina Inteligência Artficial Aplicada - Projeto final</h1>
       <div class="flex">
-      <p>Grupo: Beatriz Barbosa, Davi Galdino,  Gabriela Silva, Samuel Lemos e Suelen Ramos.</p>
+      <p class="grupo">Grupo: Beatriz Barbosa, Davi Galdino,  Gabriela Silva, Samuel Lemos e Suelen Ramos.</p>
       <a href="https://github.com/bea-codes/final-project-ai">Github</a>
-        
+      <div class="info">
+        <h3>Informações sobre o modelo:</h2>
+        <ul>
+          <li>Arquitetura: MobileNetV3.</li>
+          <li>Tarefa: Classificação de imagens.</li>
+          <li>Formatos aceitados: png, jpg, jpeg.</li>
+        </ul>
+      </div>  
       </div>
       <form action="{{url_for('predict')}}" method="post" class="flex" enctype=multipart/form-data>
-        <p>Input vai ser ou um arquivo ou um texto...</p>
+        <p>Insira uma imagem para classificar: </p>
         <!-- <input type="text" name="input" required="required"/> -->
-        <input type="file" name=file_input id="" required="required"/>
-        <button type="submit" value="Upload">Enviar</button>
+        <input type="file" name=file_input id="input" required="required"/>
+        <button type="submit" value="Upload" id="submit">Enviar</button>
       </form>
       <div class="prediction">
 		<h2>Predição do modelo</h2>
