--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: #191308;
 }
 
@@ -11,7 +12,7 @@ html {
 }
 
 body {
-  background-color: #4A8FE7;
+  background-color: #4a8fe7;
   width: 100%;
   height: 100%;
   display: flex;
@@ -27,14 +28,22 @@ body {
 }
 
 form {
-  display: fl;
-  width: 100%;
-  height: 100%;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+
   /* border: 1px solid red; */
 }
 
-h1{
-	text-align: center;
+h1 {
+  text-align: center;
+}
+
+input {
+  margin-top: 15px;
+  cursor: pointer;
 }
 
 .wrapper {
@@ -43,25 +52,35 @@ h1{
   /* border: 1px solid red; */
 }
 
-.prediction{
-	width: 80%;
-	height: 80%;
-	border: 1px solid #191308;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+.prediction {
+  width: 60%;
+  height: 80%;
+  border: 2px solid #020e1e;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #0d60cc;
+  text-align: center;
+  padding: 5px;
+  margin-top: 15px;
 }
 
 .prediction h2 {
-	margin-top: 25px;
-	margin-bottom: 50px;
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
 
-.grupo{
+.grupo {
   text-align: left;
+  margin-top: 15px;
 }
 
-#submit{
+.info {
+  margin-top: 15px;
+}
+
+#submit {
   border: none;
   border-radius: 5px;
   padding: 15px;
@@ -69,11 +88,6 @@ h1{
   cursor: pointer;
 }
 
-#submit:hover{
+#submit:hover {
   background-color: #0d60cc;
-}
-
-input{
-  margin-top: 15px;
-  cursor: pointer;
 }
