--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,7 @@ form {
   align-items: center;
   justify-content: center;
   border-radius: 15px;
+  margin-top: 15px;
 
   /* border: 1px solid red; */
 }
@@ -42,8 +43,8 @@ h1 {
 }
 
 input {
-  margin-top: 15px;
   cursor: pointer;
+  margin-left: 15px;
 }
 
 .wrapper {
@@ -84,7 +85,6 @@ input {
   border: none;
   border-radius: 5px;
   padding: 15px;
-  margin-top: 15px;
   cursor: pointer;
 }
 
