--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  color: #191308;
+  color: rgb(227, 241, 236);
 }
 
 html {
@@ -14,7 +14,7 @@ html {
 body {
   background-color: #4a8fe7;
   width: 100%;
-  height: 100%;
+  margin-top: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,7 +46,9 @@ input {
   cursor: pointer;
   margin-left: 15px;
 }
-
+button{
+  color: #020e1e;
+}
 .wrapper {
   width: 100%;
   height: 80%;
@@ -55,21 +57,26 @@ input {
 
 .prediction {
   width: 60%;
-  height: 80%;
   border: 2px solid #020e1e;
   border-radius: 15px;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: #0d60cc;
-  text-align: center;
   padding: 5px;
   margin-top: 15px;
+  text-align: left;
+  font-size: 18px;
 }
 
 .prediction h2 {
   margin-top: 25px;
   margin-bottom: 50px;
+}
+
+.prediction ul{
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 
 .grupo {
@@ -90,4 +97,9 @@ input {
 
 #submit:hover {
   background-color: #0d60cc;
+}
+
+#predicted_img{
+  width: 45%;
+  margin-bottom: 15px;
 }
